kyverno-project-7/tests/k8s/resources/exception-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app-1
  namespace: default
  labels:
    cost-center: "development"
spec:
  imagePullSecrets:
  - name: my-registry-secret
  containers:
  - name: app
    image: nginx:latest
