kyverno-project-7/tests/k8s/resources/good-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-app
  namespace: default
  labels:
    cost-center: "marketing"
spec:
  imagePullSecrets:
  - name: my-registry-secret
  containers:
  - name: app
    image: registry.awsfcaj.com/my-secure-app:v1.0.0
