kyverno-project-7/tests/k8s/resources/trigger-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-netpol-ns
